# my-web-project

./: app.py  pyproject.toml
templates/: home.html  topic_items.html
